style.css
*,
::after,
::before {
  box-sizing: border-box;
  border-width: 0;
}

@media (max-width: 790px) {
  html {
    --spacing: 1.5rem;
  }
}

body {
  width: 100vw;
  height: 100dvh;
  background-color: darkslategray;
  margin: auto;
  display: flex;
  font-family: "Inter", sans-serif;
  overflow: hidden;
}

.canvas-container {
  width: 100vw;
  height: 100dvh;
  align-items: center;
  display: flex;
  justify-content: center;
  position: relative;
}

#display-canvas:hover {
  cursor: grab;
}

#display-canvas:active {
  cursor: grabbing;
}

#display-canvas:focus-visible {
  outline: none;
}

#loadingIcon{
  position: absolute;
  width: 50px;
  height: 50px;
}

.clickable-image {
  width: 100px;
  height: 275px;
  margin: 2%;
  cursor: pointer;
}



#home {
  text-align: center;
  display: none;
  position: absolute;
  background-color: rgba(255, 255, 255, 0.479);
  width: 100%;
  height: 100%;
  
}

h2 {
  margin: 0;
  margin-top: 5%;
  font-size: 75px;
}

h3 {
  font-size: 25px;
  margin: 10px 0;
  margin-top: 1%;
}

.guide {
  margin-top: 7%;
  
}

.tuto-key{
  margin-top: 5%;
  display: flex;
  justify-content: center;
}

.key{
  display: flex;
  align-items: center;
  flex-direction: column;
}

.key img{
  margin-top: 5%;
  width: 50%;
}

.key a{
  font: bold;
}

@keyframes fadeIn {
  0% { width: 0%; height: 0%; }
  100% { width: 100%; height: 100%; }
}


#chrono{
  display: none;
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 10px;
  background-color: #f0f0f0;
  border: 1px solid #ccc;
  border-radius: 5px;
}


#text-fresque{
  display: none;
  text-align: center;
  position: absolute;
  background-color: rgba(255, 255, 255, 0.479);
  width: 100%;
  height: 100%;
  animation: fadeIn 1s;
}

.text-img{
  display: flex;
  margin-top: 5%;
}

#img-fresque{
  display: flex;
  flex-direction: column;
  align-items: center;
}

#img-fresque img{
  width: 40%;
}
.img2{
  margin-top: 2%;
}

.text {
  border: 2px solid black; 
  border-radius: 10px; 
  padding: 3%; 
  width: 50%;
  margin-right: 10%;
  font-size: 20px;
}

@keyframes opa {
  0% { opacity: 0%; }
  100% { opacity: 100%; }
}

#finish{
  text-align: center;
  display: none;
  position: absolute;
  background-color: rgb(131, 118, 118);
  width: 100%;
  height: 100%;
  animation: opa 1s;
}

.text-finish{
  font-size: 60px;
  margin-top: 20%;
  font: bold;
}
#reset{
  margin-top: 5%;
  border: 1px solid #ccc;
  border-radius: 5px;
  width: 10%;
  margin-left: 45%;
}
.reset{

  font-size: 30px;

}

